# red

./: .dockerfile  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  config.toml  deploy.sh  justfile  readme.md  tmux-last.sh  tmux.sh
.github/workflows/: build.yml  release.yml
.zed/: tasks.json
langs/c/: highlights.scm
langs/cpp/: highlights.scm
langs/csharp/: highlights.scm
langs/css/: highlights.scm
langs/html/: highlights.scm
langs/java/: highlights.scm
langs/javascript/: highlights.scm
langs/json/: highlights.scm
langs/kotlin/: highlights.scm
langs/lua/: highlights.scm
langs/markdown/: highlights.scm
langs/markdown-inline/: highlights.scm
langs/python/: highlights.scm  tests.scm
langs/rust/: highlights.scm  tests.scm
langs/shell/: highlights.scm
langs/toml/: highlights.scm
langs/typescript/: highlights.scm
langs/yaml/: highlights.scm
langs/zig/: highlights.scm
src/: code.rs  config.rs  editor.rs  lsp.rs  main.rs  process.rs  renderer.rs  screen.rs  search.rs  selection.rs  tests.rs  tree.rs  utils.rs
test/: ptest.py  test.c  test.cpp  test.css  test.go  test.html  test.java  test.js  test.json  test.kt  test.lua  test.py  test.rs  test.sh  test.ts  test.tsx  test.zig  testb.js  testb.py  tests.js
themes/: darcula.yml  material.yml  red.yml  vesper.yml
