[package]
name = "red"
version = "0.0.1"
edition = "2021"

[profile.release]
opt-level = 3
debug = true
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"

[build-dependencies]
cc="*"

[dependencies]
crossterm = {version="0.27.0", features=["event-stream", "use-dev-tty"]}
ropey = "1.6.1"
tree-sitter = "0.24.3"
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-javascript = "0.23.0"
tree-sitter-html = "0.23.0"
tree-sitter-go = "0.23.0"
tree-sitter-java = "0.23.2"
# tree-sitter-kotlin = "0.3.8"
tree-sitter-c = "0.23.1"
tree-sitter-cpp = "0.23.1"
tree-sitter-yaml = "0.6.1"
tree-sitter-bash = "0.23.1"
tree-sitter-json = "0.23.0"
tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig.git" }
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua", tag = "v0.0.19"}
serde_yaml = "0.9.31"
detect-lang = "0.1.5"
tokio = { version = "1.37.0", features = ["full"] }
# arboard = { version = "3.3.2"}
futures = "0.3.30"
futures-timer = "3.0.2"
ctrlc = "3.4.2"
signal-hook = "0.3.17"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
log2 = "0.1.10"
toml = "0.8.12"
tree-sitter-toml = "0.20.0"
strfmt = "0.2.4"
rayon = "1.9.0"
depgraph = "0.3.0"
copypasta = "0.10.1"
streaming-iterator = "0.1.9"
