[package]
name = "red"
version = "0.0.1"
edition = "2024"

[profile.release]
opt-level = 3
debug = true

[dev-dependencies]
depgraph = "0.4"

[dependencies]
crossterm = {version="0.29.0", features=["event-stream", "use-dev-tty"]}
ropey = "1.6.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-html = "0.23.0"
tree-sitter-css = "0.23.0"
tree-sitter-go = "0.23.0"
tree-sitter-java = "0.23.2"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23.1"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-lua = "0.2.0"
tree-sitter-zig = "1.1.2"
serde_yaml = "0.9.31"
detect-lang = "0.1.5"
tokio = { version = "1.37.0", features = ["full"] }
arboard = { version = "3.5", default-features = false }
futures = "0.3.30"
futures-timer = "3.0.2"
ctrlc = "3.4.2"
signal-hook = "0.3.17"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
log2 = "0.2"
toml = "0.9"
strfmt = "0.2.4"
rayon = "1.9.0"
streaming-iterator = "0.1.9"
anyhow = "1.0.98"
rust-embed = { version = "8.7.0", features = ["include-exclude"] }
dirs = "6.0.0"
notify = "8.0"
unicode-width = "0.2.1"
